@@ -13,3 +13,35 @@ dependencies {
     implementation "org.glassfish.jersey.inject:jersey-hk2:$jerseyVersion"
     implementation "org.glassfish.jersey.connectors:jersey-jdk-connector:$jerseyVersion"
 }
+
+def artifactGroup = "${group}.policy"
+
+generateSwaggerCode {
+    inputFile = file('../common/openapi.yml')
+    language = 'java'
+    library = 'jersey2'
+
+    // For Swagger Codegen v3 on Java 16+
+    // See https://github.com/swagger-api/swagger-codegen/issues/10966
+    jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
+
+    components = [
+            apiDocs  : false, apiTests: false,
+            modelDocs: false, modelTests: false
+    ]
+
+    templateDir = file("${projectDir}/src/main/resources/swaggercodegen")
+    additionalProperties = [
+            modelPackage  : "${artifactGroup}.model",
+            apiPackage    : "${artifactGroup}.api",
+            invokerPackage: "${artifactGroup}.client",
+            dateLibrary   : 'java8'
+    ]
+
+    rawOptions = ['--ignore-file-override', "${projectDir}/.swagger-codegen-ignore"]
+}
+
+idea.module.generatedSourceDirs = [file("${generateSwaggerCode.outputDir}/src/main/java")]
+sourceSets.main.java.srcDir "${generateSwaggerCode.outputDir}/src/main/java"
+compileJava.dependsOn generateSwaggerCode
+sourcesJar.dependsOn generateSwaggerCode
